src/test/resources/Parser/SyntaxErrors/IncompatibleTypesFor.front
class A:
    test () {
        for;1;{}
    }